# msdfgen

./: .gitignore  CMakeLists.txt  README.md
include/ext/: import-font.h
src/: Contour.cpp  EdgeHolder.cpp  Scanline.cpp  Shape.cpp  SignedDistance.cpp  Vector2.cpp  contour-combiners.cpp  edge-coloring.cpp  edge-segments.cpp  edge-selectors.cpp  equation-solver.cpp  estimate-sdf-error.cpp  msdfgen.cpp  rasterization.cpp  render-sdf.cpp  save-bmp.cpp  save-tiff.cpp  shape-description.cpp
src/ext/: import-font.cpp
